--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 style="text-align: center;">مرحبا, اسمي صالح</h1>
-     <div style="background-color: lightblue;">
+     <div style="background-color: lightblue; text-align:center" >
     <h3>هواياتي</h3>
     <ul>
         <li>السباحة</li>
